start quiz button refactored

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <button class="btn" id="start-quiz" type="submit">Start Quiz</button>
         </div>
         </section>
+
+        <section class="quiz-challenge-wrapper" id="question-cards">
+            
+        </section>
     </main>
 
     <script src="assets/js/script.js"></script>
